--- a/index.html
+++ b/index.html
@@ -43,21 +43,21 @@
             background-color: rgba(0, 0, 0, 0.9);
         }
         .info-container {
-            display: flex; /*alinear la imagen y el texto */
+            display: flex; /*alinear la imagen y el texto :b*/
             align-items: center; 
             margin-top: 20px; 
         }
         .info-box {
             background-color: rgba(0, 0, 0, 0.7);
-            border: 2px solid #b52f2f; /* Borde rojo para el cuadro de texto */
+            border: 2px solid #b52f2f; /* Borde rojo para el cuadro de texto c:*/
             border-radius: 10px;
             padding: 20px;
             max-width: 600px; 
             text-align: left; 
-            margin-left: 20px; /*Espacio entre la imagen y el cuadro de texto */
+            margin-left: 20px; /*Espacio entre la imagen y el cuadro de texto ;)*/
         }
         img {
-            width: 480px; 
+            width: 480px; /*tengo que parar de poner comentarios bobos xd*/
             height: auto; 
             border-radius: 10px; /* hace circular la imagen :b*/
             border: 2px solid #b52f2f; 
